2005-02-21  Jan Schmidt <thaytan@mad.scientist.com>
	* gst/dvdlpcmdec/gstdvdlpcmdec.c: (gst_dvdlpcmdec_chain):
          Make sure we only write to writable buffers

2005-02-20  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/riff/riff-media.c:
	(gst_riff_create_audio_caps_with_data):
	  Do actually fix invalid RIFF fmt header values for alaw
	  and mulaw audio instead of just saying so.

	* gst/wavparse/gstwavparse.c: (gst_wavparse_fmt):
	  Give gst_riff_create_audio_caps_with_data() a chance to
	  fix up broken format header fields before extracting any
	  parameters from the header. (fixes #167633)

2005-02-19  Martin Holters  <martin.holters@gmx.de>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst/audioconvert/bufferframesconvert.c:
	(buffer_frames_convert_link):
	  Don't leak othercaps. (fixes #167878)

2005-02-19  Arwed v. Merkatz  <v.merkatz@gmx.net>>

	* configure.ac:
	* ext/libvisual/visual.c: (gst_visual_srclink),
	(gst_visual_change_state):
	  Support libvisual 0.2.0.

2005-02-18  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/jpeg/gstjpegdec.c: (gst_jpegdec_chain):
	* ext/jpeg/gstjpegenc.c: (gst_jpegenc_resync), (gst_jpegenc_chain):
	  Use same rowstrides for I420 as used everywhere else.

2005-02-17  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/avi/gstavidemux.c: (gst_avi_demux_invert):
	  Declare variables at beginning of block and make gcc-2.95 happy
	  (fixes # 167482, patch by Gergely Nagy).
	  
	* gst/tcp/gsttcpclientsrc.c:
	* gst/tcp/gsttcpclientsrc.h:
	  Move some includes into the header, so that struct sockaddr_in is
	  defined when it should be defined on FreeBSD as well (fixes
	  #167483).
	  
	* gst/tcp/gsttcpserversrc.c: (gst_tcpserversrc_init_receive):
	  Don't pass uninitialised values to setsockopt() here either.

2005-02-17  Luca Ognibene  <luogni at tin dot it>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>
